# gp-regression-camparison

./: .gitignore
CppMlpack/: CMakeLists.txt  CMakePresets.json  csv_loader.hpp  main.cpp  mlpack_gp_regression_results.json  vcpkg.json
Dataset/: friedman_data_n100_d90_t3.csv  friedman_data_n500_d90_t3.csv
py-sklearn/: gen_friedman_1.py  sklearn_gp_regression.py  sklearn_gp_regression_results_n100.json  sklearn_gp_regression_results_n500.json  sklearn_gp_regression_results_n5000.json
